turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:1: error: ':' expected but ')' found.
  def setCouleurSol(couleur)  {
                           ^LangtonsAnt:8: error: identifier expected but '}' found.
} 
^